[gd_scene load_steps=10 format=3 uid="uid://birs07dsnnfxt"]

[ext_resource type="Script" uid="uid://cn10awdja6uba" path="res://scripts/health_component.gd" id="1_at0e7"]
[ext_resource type="AudioStream" uid="uid://dai7dqoyetx2q" path="res://assets/audio/rat_death.mp3" id="2_2d7a0"]
[ext_resource type="AudioStream" uid="uid://cqq2dtmkdxe30" path="res://assets/audio/eat_rat.mp3" id="4_5mefd"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5mefd"]
radial_velocity_min = -2.23517e-05
radial_velocity_max = 1.99998
gravity = Vector3(0, 9.8, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6s34g"]
albedo_color = Color(1, 0, 0, 1)
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_my6n6"]
material = SubResource("StandardMaterial3D_6s34g")
size = Vector2(0.1, 0.1)

[sub_resource type="Animation" id="Animation_5mefd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles3D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2d7a0"]
resource_name = "bleed"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles3D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_my6n6"]
_data = {
&"RESET": SubResource("Animation_5mefd"),
&"bleed": SubResource("Animation_2d7a0")
}

[node name="HealthComponent" type="Node3D"]
script = ExtResource("1_at0e7")

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_2d7a0")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00708187, 0)
emitting = false
amount = 70
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_5mefd")
draw_pass_1 = SubResource("QuadMesh_my6n6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_my6n6")
}

[node name="EatRat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5mefd")
